volkszaehler/volkszaehler/database.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: database
  sessionAffinity: None
  type: ClusterIP
